--- a/src/task-03.html
+++ b/src/task-03.html
@@ -15,3 +15,9 @@
     <script src="js/task-03.js" type="module"></script>
   </body>
 </html>
+
+
+<!-- Використовуй масив об'єктів images для створення елементів <img>, вкладених в <li>. Для створення розмітки використовуй
+  шаблонні рядки і метод insertAdjacentHTML(). -->
+
+  
