--- a/src/task-04.html
+++ b/src/task-04.html
@@ -19,3 +19,8 @@
     <script src="js/task-04.js" type="module"></script>
   </body>
 </html>
+
+
+<!-- Створи змінну counterValue, в якій буде зберігатися поточне значення лічильника та ініціалізуй її значенням 0.
+Додай слухачів кліків до кнопок, всередині яких збільшуй або зменшуй значення лічильника.
+Оновлюй інтерфейс новим значенням змінної counterValue. -->
